--- a/css/scss/layout/_container.scss
+++ b/css/scss/layout/_container.scss
@@ -4,9 +4,9 @@
 	width: 100vw;
 	height: 100vh;
 	max-width: 480px;
+	min-width: 320px;
 	min-height: 640px;
 	margin: 0 auto;
-    overflow-x: hidden;
 }
 .gap {
 	padding-left: 16px;
