--- a/css/components.css
+++ b/css/components.css
@@ -8,9 +8,9 @@
   width: 100vw;
   height: 100vh;
   max-width: 480px;
+  min-width: 320px;
   min-height: 640px;
   margin: 0 auto;
-  overflow-x: hidden;
 }
 
 .gap {
@@ -86,13 +86,78 @@ header h1 {
   background-image: url("../image/common/icn_dropdown_on.svg");
 }
 
+.pd_bottom {
+  padding-bottom: 100px;
+}
+
 .bottom_gnb {
   position: fixed;
-  bottom: 0;
+  bottom: -1px;
   max-width: 480px;
+  display: flex;
+  width: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.bottom_gnb li {
+  width: 33.3%;
+}
+.bottom_gnb a {
+  display: flex;
+  padding: 19px 0px;
+  flex-direction: column;
+  align-items: center;
+  gap: 4px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  background: #fff;
+}
+.bottom_gnb a .bottom_icn {
+  display: block;
+  width: 24px;
+  height: 24px;
+}
+.bottom_gnb a .bottom_icn1 {
+  background-image: url("../image/common/icn_space.svg");
+}
+.bottom_gnb a .bottom_icn2 {
+  background-image: url("../image/common/icn_misson.svg");
+}
+.bottom_gnb a .bottom_icn3 {
+  background-image: url("../image/common/icn_event.svg");
+}
+.bottom_gnb a .bottom_menutxt {
+  color: #262626;
+  text-align: center;
+  font-family: "LG_head";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 14px;
+  margin-top: 4px;
+}
+.bottom_gnb a.active {
+  border-top: 2px solid #262626;
+  background: linear-gradient(180deg, #F0F0F0 0%, rgba(240, 240, 240, 0) 100%), #fff;
+}
+.bottom_gnb a.active .bottom_icn1 {
+  background-image: url("../image/common/icn_space_on.svg");
+}
+.bottom_gnb a.active .bottom_icn2 {
+  background-image: url("../image/common/icn_misson_on.svg");
+}
+.bottom_gnb a.active .bottom_icn3 {
+  background-image: url("../image/common/icn_event_on.svg");
+}
+.bottom_gnb a.active .bottom_menutxt {
+  font-weight: 700;
 }
 
 /* 컴포넌트 */
+.btn_pop_circle {
+  width: 56px;
+  height: 56px;
+  text-indent: -9999px;
+}
+
 /*
 체크박스 checkbox
 */
