--- a/css/scss/pages/_popup.scss
+++ b/css/scss/pages/_popup.scss
@@ -3,6 +3,7 @@
 */
 .popup_wrap {
 	display: none;
+	flex-direction: column;
 	width: 100%;
 	height: 100%;
 	position: absolute;
@@ -15,11 +16,15 @@
 	position: relative;
 }
 .survey_pop {
+	transform: none;
+	top:0;
+	left:0;
+	position: fixed;
 	.pop_content {
 		background-color: $bg-beige-1;
+		height: 100%;
 	}
 }
-
 .btn_pop_close {
 	position: absolute;
 	top:16px;
@@ -42,4 +47,93 @@
 	p {
 		@include font-txt-m400;
 	}
+}
+/* 관심사 선택 */
+.pop_h100 {
+	height: 100%;
+}
+.survey_radios {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	gap: 10px;
+	margin-top: 20px;
+}
+.survey_radio {
+	position: relative;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	display: table;
+	width: 100%;
+	input {
+		position: absolute;
+		opacity: 0;
+		cursor: pointer;
+		height: 0;
+		width: 0;
+		display: inline-block;
+	}
+	input:checked {
+		position: absolute;
+		top: 0px;
+		left: 0px;
+	}
+}
+.survey_radio input:checked ~ .survey_radio_txt {
+	color: $white;
+	background: $LG-red-act;
+}
+.survey_radio_txt {
+	display: table-cell;
+	width: 100%;
+	height: 100%;
+	padding: 16px;
+	color: $txt-main-b1;
+	text-align: center;
+	font-family : "LG_head";
+	font-size: 16px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 24px;
+	background-color: $white;
+	color: $txt-main-b1;
+	border-radius: 10px;
+}
+.pop_bottom_btns {
+	position: absolute;
+	bottom: 40px;
+	@include center_ab;
+}
+.chk_circle {
+	background-image: url('../image/common/btn_check_disable.svg');
+}
+.chk_circle.active {
+	background-image: url('../image/common/btn_check.svg');
+}
+.btn_back {
+	position: absolute;
+	bottom: 40px;
+	left: 16px;
+	color: $txt-main-b1;
+	font-family : "LG_head";
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 14px; /* 100% */
+	&::before {
+		content: '';
+		background-image: url('../image/common/icn_arr_back_s.svg');
+		display: inline-block;
+		position: relative;
+		top:1px;
+		width: 6px;
+		height: 10px;
+		margin-right: 4px;
+	}
+}
+.survey_result_floor {
+	padding-top: 24px;
 }
