--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,7 @@
 */
 .popup_wrap {
   display: none;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   position: absolute;
@@ -126,8 +127,15 @@
   position: relative;
 }
 
+.survey_pop {
+  transform: none;
+  top: 0;
+  left: 0;
+  position: fixed;
+}
 .survey_pop .pop_content {
   background-color: #F0ECE4;
+  height: 100%;
 }
 
 .btn_pop_close {
@@ -158,6 +166,105 @@
   font-weight: 400;
   font-style: normal;
   line-height: 24px;
+}
+
+/* 관심사 선택 */
+.pop_h100 {
+  height: 100%;
+}
+
+.survey_radios {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.survey_radio {
+  position: relative;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  display: table;
+  width: 100%;
+}
+.survey_radio input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+  display: inline-block;
+}
+.survey_radio input:checked {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+
+.survey_radio input:checked ~ .survey_radio_txt {
+  color: #fff;
+  background: #FD312E;
+}
+
+.survey_radio_txt {
+  display: table-cell;
+  width: 100%;
+  height: 100%;
+  padding: 16px;
+  color: #000000;
+  text-align: center;
+  font-family: "LG_head";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  background-color: #fff;
+  color: #000000;
+  border-radius: 10px;
+}
+
+.pop_bottom_btns {
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.chk_circle {
+  background-image: url("../image/common/btn_check_disable.svg");
+}
+
+.chk_circle.active {
+  background-image: url("../image/common/btn_check.svg");
+}
+
+.btn_back {
+  position: absolute;
+  bottom: 40px;
+  left: 16px;
+  color: #000000;
+  font-family: "LG_head";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 14px; /* 100% */
+}
+.btn_back::before {
+  content: "";
+  background-image: url("../image/common/icn_arr_back_s.svg");
+  display: inline-block;
+  position: relative;
+  top: 1px;
+  width: 6px;
+  height: 10px;
+  margin-right: 4px;
+}
+
+.survey_result_floor {
+  padding-top: 24px;
 }
 
 /*
@@ -213,7 +320,7 @@ info
   width: 1px;
   height: 14px;
   background-color: #000000;
-  margin-left: 8px;
+  margin-left: 10px;
 }
 .info_time_wrap .info_time_list {
   padding-left: 12px;
@@ -254,6 +361,8 @@ info
 .info_floor_sec .info_floor_title {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  padding-bottom: 20px;
 }
 .info_floor_sec .info_floor_title h3 {
   color: #000000;
@@ -262,6 +371,7 @@ info
   font-weight: 700;
   font-style: normal;
   line-height: 24px;
+  line-height: 16px;
 }
 .info_floor_sec .floor h4 {
   color: #000000;
@@ -273,4 +383,105 @@ info
   color: #716F6A;
   text-align: left;
   padding-bottom: 10px;
+}
+
+/* 슬라이드 카드형 콘텐츠 */
+.slide {
+  border-radius: 10px;
+}
+.slide .slide_img {
+  width: 100%;
+  height: 240px;
+  background-size: cover;
+  border-radius: 10px 10px 0 0;
+}
+.slide .slide_link {
+  display: block;
+  width: calc(100% - 32px);
+  padding: 10px 16px;
+  position: absolute;
+  bottom: 16px;
+  left: 16px;
+  text-align: center;
+  border: 1px solid #F6F3EB;
+  color: #F6F3EB;
+  text-align: center;
+  font-family: LG EI Headline;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 16px;
+  border-radius: 50px;
+}
+.slide .slide_cont {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 16px;
+  border-radius: 0 0 10px 10px;
+  height: calc(100% - 240px);
+  background-color: #fff;
+}
+.slide .slide_cont h5 {
+  color: #000000;
+  text-align: center;
+  font-family: "LG_text";
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 16px;
+}
+.slide .slide_cont h6 {
+  color: #716F6A;
+  text-align: center;
+  font-family: "LG_text";
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 14px;
+  margin-top: 4px;
+}
+.slide .slide_cont p {
+  margin-top: 10px;
+  color: #000000;
+  text-align: center;
+  font-family: "LG_text";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+}
+
+.floor_slide {
+  margin-bottom: 32px;
+}
+.floor_slide .slide_cont {
+  background-color: #E6E1D6;
+}
+.floor_slide .slick-slide {
+  width: calc(100vw - 28px);
+  max-width: 452px;
+  margin-right: 10px;
+}
+.floor_slide .slick-dots {
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  background-color: #E6E1D6;
+  height: 2px;
+  bottom: -10px;
+  width: calc(100vw - 32px);
+  max-width: 452px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.floor_slide .slick-dots li {
+  margin: unset;
+  width: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: auto;
+  height: 2px;
+  transition: background-color 0.3s ease;
+}
+.floor_slide .slick-dots li.slick-active {
+  background-color: #262626;
 }/*# sourceMappingURL=style.css.map */
