--- a/css/style.css
+++ b/css/style.css
@@ -360,6 +360,9 @@ Survey
 .survey_about {padding-top: 160px; display: flex; flex-direction: column; gap: 40px; padding-bottom: 76px;}
 .survey_about .about_title {gap: 20px;}
 
+/* 로딩 바 제작 */
+#loading {display: flex; position: fixed; z-index: 10000;}
+#loading .pop_content img {width: 120px; margin: 0 auto;}
 /*
 미디어 쿼리
 */
@@ -376,3 +379,7 @@ html[lang="vi"] .mission01_about .about_howto ul li .about_step {padding-left: 5
 html[lang="vi"] .mission01_about .about_howto ul li:nth-child(3) .about_step{padding: 28px 10px 28px 5px;}
 html[lang="vi"] .survey_pop .pop_content {overflow-y: scroll;}
 html[lang="vi"] .pop_bottom_btns {position: relative; bottom: 0; padding-top: 40px; padding-bottom: 40px;}
+
+html[lang="vi"] .info_time_wrap {flex-direction: column; align-items: flex-start;}
+html[lang="vi"] .info_time_wrap .info_time_title h3 {padding-left: 12px; padding-bottom: 4px;}
+html[lang="vi"] .info_time_wrap .info_time_title h3:after {display: none;}
