--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@
 .blur_pop .pop_content .m02_color_list p{ font-size:14px;  line-height:20px;  font-weight:300}
 
 /* 스플래시 팝업 */
-#splash_screen{ position:fixed; /* 고정 위치 */ top:0;  left:0;  width:100%;  height:100%;  background-color:#F0ECE4; /* 배경색 */ z-index:1000; /* 다른 요소들보다 상위에 위치 */ display:flex;  justify-content:center;  align-items:flex-start;  transition:1s ease}
+#splash_screen{ position:fixed; top:0;  left:0;  width:100%;  height:100%;  background-color:#F0ECE4;  z-index:1000; display:flex;  justify-content:center;  align-items:flex-start;  transition:1s ease}
 #splash_screen img{ width:100%;  max-width:480px}
 #splash_custom {width:100%;  max-width:480px;}
 #splash_custom h2 {color:#000;  font-family:"LG_head"; font-size: 20px;
