--- a/no_visitor/css/novisitor.css
+++ b/no_visitor/css/novisitor.css
@@ -26,7 +26,7 @@ nav button.active{  color:#000;   font-weight:700}
 .m_dropdown_menu nav button:focus{  background-color:#F0ECE4}
 
 .language{  position:absolute;   width:86px;   top:0;   right:16px;   background:white;   border-radius:16px;   z-index:13;   color:#000}
-.language .current{  color:#000;   font-size:14px;   font-weight:400;   line-height:16px;   padding:16px 8px;   width:100%;   text-align:left}
+.language .current{  color:#000;   font-size:14px;   font-weight:400;   line-height:16px;   padding:15px 8px;   width:100%;   text-align:left}
 .language .current::after{  content:"";   background:url("../image/icn_dropdown.svg");   display:block;   position:absolute;   width:16px;   height:16px;   top:16px;   right:8px}
 .language .active.current::after{  background-image:url("../image/icn_dropdown_on.svg")}
 .language .dropdown_cont{ width:100%;  display:none;  background:#fff;  position:absolute;  border-radius:16px;  padding:8px; top: 35px;}
@@ -108,6 +108,7 @@ section .container{  align-items:center}
   .floor_slide .slick-slide{ width:calc(100vw - 28px);  max-width:452px;  margin:0 5px}
   #sec03_time .time li {font-size: 16px; line-height: 24px;}
   .floor h4 {font-size: 18px; line-height: 26px;}
+  .floor_g_slide.floor_slide .slick-slide {min-height: 430px;}
 }
 .mobile_guide{ display:flex;  flex-direction:row;  border-radius:20px;  width:100%}
 .mobile_guide::before{ content:"";  display:block;  background:#E6E1D6;  position:absolute;  top:50px;  width:100%;  height:calc(100% - 100px);  border-radius:20px}
