--- a/css/style.css
+++ b/css/style.css
@@ -1944,7 +1944,7 @@ html[lang="vi"] .pop_bottom_btns {
 	height: 40px;
 }
 
-/* 추가 */
+/* 23-12-15 추가 */
 .bottom_content {
 	padding-bottom: 60px;
 }
@@ -1967,6 +1967,13 @@ html[lang="vi"] .pop_bottom_btns {
 		padding-top: 45%;
 	}
 }
+.policy_wrap p {
+	word-break: break-all;
+	word-wrap: break-word;
+}
+.policy_wrap p a {
+	word-break: break-all;
+}
 /* 푸터 */
 footer {
 	background-color: #fff; 
@@ -1979,7 +1986,7 @@ footer a:hover, footer a:focus {
 }
 .login_b_page footer {
 	padding-bottom: 0;
-	margin-top: -10px;
+	margin-top: -20px;
 }
 .footer_component {
 	max-width: 1284px; 
@@ -2000,17 +2007,18 @@ footer a:hover, footer a:focus {
 	padding-bottom: 5px;
 }
 .links_left ul li {
-	padding-right: 30px;
+	padding-right: 25px;
 }
 .links_left ul li a {
 	font-family:"LG_text"; 
-	font-size: 14px; 
+	font-size: 13px; 
 	line-height: 24px; 
 	color: #fff; 
 	font-style: normal; 
 	font-weight: 400; 
 	display: inline-block; 
 	position: relative;
+	letter-spacing: -0.03rem;
 }
 .footer_component .copyright {
 	font-family:"LG_text"; 
