--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -143,7 +143,7 @@ adm 속성 공통
 .dash_numboard .today_total {
   display: flex;
   flex-direction: row;
-  min-width: 378px;
+  min-width: 258px;
   width: calc(25% - 15px);
   padding: 8px;
   align-items: center;
@@ -178,6 +178,46 @@ adm 속성 공통
   height: 90%;
 }
 
+@media (max-width: 1550px) {
+  .dash_numboard .today_total .total_info .date {
+    font-size: 13px;
+  }
+  .dash_numboard .today_total .total_info .people {
+    font-size: 13px;
+  }
+  .dash_numboard .today_total .total_info .count {
+    font-size: 34px;
+  }
+}
+@media (max-width: 1430px) {
+  .dash_numboard .today_total {
+    min-width: 0;
+    width: calc(33% - 10px);
+  }
+  .dash_numboard .today_total .total_info .date {
+    font-size: 12px;
+  }
+  .dash_numboard .today_total .total_info .people {
+    font-size: 12px;
+  }
+  .dash_numboard .today_total .total_info .count {
+    font-size: 30px;
+  }
+}
+@media (max-width: 1100px) {
+  .dash_numboard .today_total {
+    min-width: 230px;
+  }
+  .dash_numboard .today_total .total_info .date {
+    font-size: 12px;
+  }
+  .dash_numboard .today_total .total_info .people {
+    font-size: 12px;
+  }
+  .dash_numboard .today_total .total_info .count {
+    font-size: 30px;
+  }
+}
 .dash_graph_wrap {
   align-items: flex-start;
 }
@@ -701,6 +741,41 @@ etc
     width: 10%;
     height: 100%;
 }*/
+/* 반응형 추가 조절 */
+@media (max-width: 1620px) {
+  input {
+    font-size: 13px;
+    width: 150px;
+  }
+  .adm_top_title {
+    font-size: 19px;
+    width: 70px;
+  }
+  .dash_graph_wrap .bg_w {
+    width: calc(100% - 95px) !important;
+  }
+  .channel_row .adm_top_title {
+    width: 50px;
+  }
+  .channel_row .chk_wrap {
+    min-width: 515px;
+  }
+  .chkText {
+    font-size: 14px;
+  }
+  .topsch_area > .flex_column {
+    gap: 16px;
+  }
+  .age_row .flex_column {
+    gap: 5px;
+  }
+  .age_row .flex_row {
+    row-gap: 5px;
+  }
+  .adm_table_top .table_total {
+    font-size: 18px;
+  }
+}
 /*
 베트남어 css 이슈
 */
