--- a/admin/css/scss/pages/_01_dashboard.scss
+++ b/admin/css/scss/pages/_01_dashboard.scss
@@ -26,7 +26,7 @@ adm 속성 공통
 	.today_total {
 		display: flex;
 		flex-direction: row;
-		min-width: 378px;
+		min-width: 258px;
 		width: calc(25% - 15px);
 		padding: 8px;
 		align-items: center;
@@ -58,6 +58,42 @@ adm 속성 공통
 			background: $line_b;
 			width: 1px;
 			height: 90%;
+		}
+	}
+}
+@media (max-width: 1550px) {
+	.dash_numboard {
+		.today_total {
+			.total_info {
+				.date {font-size: 13px;}
+				.people {font-size: 13px;}
+				.count {font-size: 34px;}
+			}
+		}
+	}
+}
+@media (max-width: 1430px) {
+	.dash_numboard {
+		.today_total {
+			min-width: 0;
+			width: calc(33% - 10px);
+			.total_info {
+				.date {font-size: 12px;}
+				.people {font-size: 12px;}
+				.count {font-size: 30px;}
+			}
+		}
+	}
+}
+@media (max-width: 1100px) {
+	.dash_numboard {
+		.today_total {
+			min-width: 230px;
+			.total_info {
+				.date {font-size: 12px;}
+				.people {font-size: 12px;}
+				.count {font-size: 30px;}
+			}
 		}
 	}
 }
