--- a/css/style.css
+++ b/css/style.css
@@ -1920,6 +1920,22 @@ Survey
 	.worldcup_item .txt_wrap {
 		padding: 10px;
 	}
+	.worldcup_sec {
+		overflow-y:scroll;
+	}
+	.slide .slide_img {
+		height: auto;
+		padding-bottom: 70%;
+	}
+	.slide .slide_cont {
+		height: auto;
+	}
+	#m01_scan_clear.blur_pop .pop_content {
+		padding-bottom: 70px;
+	}
+	#m01_scan_clear .pop_bottom_btns p {
+		margin-bottom: 20px;
+	}
 }
 /* 
 베트남어 대응
@@ -1944,29 +1960,6 @@ html[lang="vi"] .pop_bottom_btns {
 	height: 40px;
 }
 
-/* 추가 */
-.bottom_content {
-	padding-bottom: 60px;
-}
-.survey_02.pop_h100 {
-	padding-bottom: 140px;
-}
-.info_floor_sec.pd_bottom {
-	padding-bottom: 30px;
-}
-.m_banner_slide {
-    overflow: hidden;
-    margin-bottom: -6px !important;
-}
-.event_list {
-	padding-bottom: 80px;
-}
-@media (max-height: 656px) {
-	.bottom_content {
-		margin-top: auto !important;
-		padding-top: 45%;
-	}
-}
 /* 푸터 */
 footer {
 	background-color: #fff; 
@@ -2002,15 +1995,19 @@ footer a:hover, footer a:focus {
 .links_left ul li {
 	padding-right: 30px;
 }
+.links_left ul li:last-child {
+	padding-right: 0;
+}
 .links_left ul li a {
 	font-family:"LG_text"; 
-	font-size: 14px; 
+	font-size: 13px; 
 	line-height: 24px; 
 	color: #fff; 
 	font-style: normal; 
 	font-weight: 400; 
 	display: inline-block; 
 	position: relative;
+	letter-spacing: -0.03rem;
 }
 .footer_component .copyright {
 	font-family:"LG_text"; 
@@ -2098,4 +2095,56 @@ footer a:hover, footer a:focus {
 	height: 12px; 
 	background: url('../image/common/footer_jd_arrow.svg') 0 1px no-repeat; 
 	margin-left: 3px;
+}
+.policy_wrap {
+	word-break: break-all;
+    word-wrap: break-word;
+}
+
+/* 추가 */
+.survey_radios {
+    padding-bottom: 140px;
+}
+.bottom_content {
+	padding-bottom: 60px;
+}
+.survey_02.pop_h100 {
+	padding-bottom: 140px;
+}
+.info_floor_sec.pd_bottom {
+	padding-bottom: 30px;
+}
+.m_banner_slide {
+    overflow: hidden;
+    margin-bottom: -6px !important;
+}
+.event_list {
+	padding-bottom: 80px;
+}
+.worldcup_sec {
+	min-height: 100%;
+	height: 100%;
+}
+.worldcup_item .txt_wrap {
+	border-radius: 0 9px 9px 0;
+}
+@media (max-height: 656px) {
+	.bottom_content {
+		margin-top: auto !important;
+		padding-top: 45%;
+	}
+}
+.mission03_worldcup {
+	background-color: #f0ece4;
+}
+.worldcup_list {
+	padding-bottom: 60px;
+}
+@media (max-width: 345px) {
+	.worldcup_item .txt_wrap {
+		width: calc(100% - 80px);
+	}
+	.worldcup_sec  {
+		overflow-y: scroll;
+	}
 }
