--- a/admin/css/scss/pages/_vn.scss
+++ b/admin/css/scss/pages/_vn.scss
@@ -81,3 +81,13 @@ html[lang=vi] .adm_table_cont_obs table.adm_table tr td:first-child {
     min-width: 250px !important;
 	width: 32% !important;
 }
+
+html .dash_table_wrap table.adm_table col:first-child {
+	width: 20% !important;
+}
+html .dash_table_wrap table.adm_table col:nth-child(2) {
+	width: 60% !important;
+}
+html .dash_table_wrap table.adm_table col:nth-child(3) {
+	width: 20% !important;
+}
