--- a/no_visitor/css/novisitor.css
+++ b/no_visitor/css/novisitor.css
@@ -208,7 +208,7 @@ section .container{  align-items:center}
 .policy_wrap p { color: #000; font-family: "LG_text"; font-size: 16px; font-weight: 400;  font-style: normal; line-height: 24px;}
 .policy_wrap p {
 	word-break: keep-all;
-    word-wrap: normal;
+  word-wrap: break-word;
 }
 .policy_wrap p a {
 	word-break: break-all;
